--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 serve on ice! Word of warning: too many Spicy Vampires may lead
                 to an unnatural fear of sunshine.
               </p>
-              <button  id="spin_button"><a href='#spinner_wrapper'>SPIN AGAIN</a></button>
+              <a id="spin_button_link" href='#container'><button  id="spin_button">SPIN AGAIN</button></a>
             </div>
           </div>
         </div>
