changed click button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="spinner_recipe_wrapper">
           <div id="spinner_wrapper">
             <div id="spinner">
-              <img src="./assets/slot-machine.svg" />
+              <img id='spinner_svg' src="./assets/slot-machine.svg" />
               <div id="spinner_logo_wrapper">
                 <h1 class="spinner_logo">Halloween</h1>
                 <h1 class="spinner_logo">Coctail Recipes</h1>
