--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <div id="spinner_screen"></div>
               </div>
               <div id="slot_spin_wrapper">
-                <div id="slot_spin_button">
+                <!-- <div id="slot_spin_button">
                   <div id="bot"></div>
                   <div id="mid"></div>
                   <div id="top"></div>
-                </div>
+                </div> -->
                 <h3 id="slot_spin_text">CLICK TO SPIN!</h3>
               </div>
             </div>
