--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <div id="mid"></div>
                   <div id="top"></div>
                 </div> -->
-                <h3 id="slot_spin_text">CLICK TO SPIN!</h3>
+                <p id="slot_spin_text">CLICK TO SPIN!</p>
               </div>
             </div>
           </div>
