--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <div id="spinner_screen"></div>
               </div>
               <div id="slot_spin_wrapper">
-                <!-- <div id="slot_spin_button">
+                <div id="slot_spin_button">
                   <div id="bot"></div>
                   <div id="mid"></div>
                   <div id="top"></div>
-                </div> -->
-                <p id="slot_spin_text">CLICK TO SPIN!</p>
+                </div>
+                <h3 id="slot_spin_text">CLICK TO SPIN!</h3>
               </div>
             </div>
           </div>
