--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="spinner_recipe_wrapper">
           <div id="spinner_wrapper">
             <div id="spinner">
-              <img id='spinner_svg' src="./assets/slot-machine.svg" />
+              <img id="spinner_svg" src="./assets/slot-machine.svg" />
               <div id="spinner_logo_wrapper">
                 <h1 class="spinner_logo">Halloween</h1>
                 <h1 class="spinner_logo">Coctail Recipes</h1>
@@ -29,7 +29,9 @@
                   <div id="mid"></div>
                   <div id="top"></div>
                 </div>
-                <h3 id="slot_spin_text">CLICK TO SPIN!</h3>
+                <div id="slot_spin_text_wrapper">
+                  <h3 id="slot_spin_text">CLICK TO SPIN!</h3>
+                </div>
               </div>
             </div>
           </div>
@@ -92,21 +94,55 @@
             </div>
             <div class="social_media_icon">
               <a href="#">
-                <svg id="logo-instagram" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="38.92" height="38.92" viewBox="0 0 38.92 38.92">
+                <svg
+                  id="logo-instagram"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  width="38.92"
+                  height="38.92"
+                  viewBox="0 0 38.92 38.92"
+                >
                   <defs>
-                    <radialGradient id="radial-gradient" cx="0.133" cy="1.005" r="1.305" gradientTransform="translate(0)" gradientUnits="objectBoundingBox">
-                      <stop offset="0.09" stop-color="#fa8f21"/>
-                      <stop offset="0.78" stop-color="#d82d7e"/>
+                    <radialGradient
+                      id="radial-gradient"
+                      cx="0.133"
+                      cy="1.005"
+                      r="1.305"
+                      gradientTransform="translate(0)"
+                      gradientUnits="objectBoundingBox"
+                    >
+                      <stop offset="0.09" stop-color="#fa8f21" />
+                      <stop offset="0.78" stop-color="#d82d7e" />
                     </radialGradient>
-                    <radialGradient id="radial-gradient-2" cx="0.606" cy="1.05" r="1.029" gradientTransform="translate(0)" gradientUnits="objectBoundingBox">
-                      <stop offset="0.64" stop-color="#8c3aaa" stop-opacity="0"/>
-                      <stop offset="1" stop-color="#8c3aaa"/>
+                    <radialGradient
+                      id="radial-gradient-2"
+                      cx="0.606"
+                      cy="1.05"
+                      r="1.029"
+                      gradientTransform="translate(0)"
+                      gradientUnits="objectBoundingBox"
+                    >
+                      <stop
+                        offset="0.64"
+                        stop-color="#8c3aaa"
+                        stop-opacity="0"
+                      />
+                      <stop offset="1" stop-color="#8c3aaa" />
                     </radialGradient>
                   </defs>
-                  <path id="Path_849" data-name="Path 849" d="M12.975,19.46a6.487,6.487,0,1,1,6.486,6.487,6.487,6.487,0,0,1-6.486-6.487m-3.507,0a9.993,9.993,0,1,0,9.993-9.992A9.992,9.992,0,0,0,9.468,19.46M27.514,9.071A2.335,2.335,0,1,0,29.85,6.737h0a2.336,2.336,0,0,0-2.335,2.334M11.6,35.3a10.756,10.756,0,0,1-3.614-.669,6.048,6.048,0,0,1-2.238-1.456,6,6,0,0,1-1.456-2.237,10.745,10.745,0,0,1-.669-3.614c-.094-2.051-.113-2.667-.113-7.864s.02-5.811.113-7.864a10.826,10.826,0,0,1,.669-3.614A6.048,6.048,0,0,1,5.746,5.744,6,6,0,0,1,7.985,4.288,10.746,10.746,0,0,1,11.6,3.619c2.051-.094,2.668-.113,7.862-.113s5.811.02,7.864.113a10.827,10.827,0,0,1,3.614.669,6.029,6.029,0,0,1,2.238,1.456,6.029,6.029,0,0,1,1.456,2.238A10.745,10.745,0,0,1,35.3,11.6c.094,2.053.113,2.667.113,7.864s-.019,5.811-.113,7.864a10.8,10.8,0,0,1-.669,3.614,6.443,6.443,0,0,1-3.694,3.692,10.746,10.746,0,0,1-3.614.669c-2.051.094-2.668.113-7.864.113s-5.811-.019-7.862-.113M11.437.118a14.27,14.27,0,0,0-4.724.9A9.545,9.545,0,0,0,3.266,3.266,9.508,9.508,0,0,0,1.022,6.714a14.273,14.273,0,0,0-.9,4.723C.022,13.512,0,14.175,0,19.46s.022,5.948.118,8.023a14.272,14.272,0,0,0,.9,4.723,9.513,9.513,0,0,0,2.245,3.447A9.569,9.569,0,0,0,6.714,37.9a14.283,14.283,0,0,0,4.724.9c2.076.094,2.738.118,8.023.118s5.948-.022,8.023-.118a14.274,14.274,0,0,0,4.724-.9A9.95,9.95,0,0,0,37.9,32.206a14.233,14.233,0,0,0,.9-4.723c.094-2.076.116-2.738.116-8.023s-.022-5.948-.116-8.023a14.268,14.268,0,0,0-.9-4.723,9.57,9.57,0,0,0-2.245-3.447,9.523,9.523,0,0,0-3.446-2.245,14.252,14.252,0,0,0-4.724-.9C25.411.024,24.747,0,19.462,0s-5.949.022-8.025.118" fill="url(#radial-gradient)"/>
-                  <path id="Path_850" data-name="Path 850" d="M12.975,19.46a6.487,6.487,0,1,1,6.486,6.487,6.487,6.487,0,0,1-6.486-6.487m-3.507,0a9.993,9.993,0,1,0,9.993-9.992A9.992,9.992,0,0,0,9.468,19.46M27.514,9.071A2.335,2.335,0,1,0,29.85,6.737h0a2.336,2.336,0,0,0-2.335,2.334M11.6,35.3a10.756,10.756,0,0,1-3.614-.669,6.048,6.048,0,0,1-2.238-1.456,6,6,0,0,1-1.456-2.237,10.745,10.745,0,0,1-.669-3.614c-.094-2.051-.113-2.667-.113-7.864s.02-5.811.113-7.864a10.826,10.826,0,0,1,.669-3.614A6.048,6.048,0,0,1,5.746,5.744,6,6,0,0,1,7.985,4.288,10.746,10.746,0,0,1,11.6,3.619c2.051-.094,2.668-.113,7.862-.113s5.811.02,7.864.113a10.827,10.827,0,0,1,3.614.669,6.029,6.029,0,0,1,2.238,1.456,6.029,6.029,0,0,1,1.456,2.238A10.745,10.745,0,0,1,35.3,11.6c.094,2.053.113,2.667.113,7.864s-.019,5.811-.113,7.864a10.8,10.8,0,0,1-.669,3.614,6.443,6.443,0,0,1-3.694,3.692,10.746,10.746,0,0,1-3.614.669c-2.051.094-2.668.113-7.864.113s-5.811-.019-7.862-.113M11.437.118a14.27,14.27,0,0,0-4.724.9A9.545,9.545,0,0,0,3.266,3.266,9.508,9.508,0,0,0,1.022,6.714a14.273,14.273,0,0,0-.9,4.723C.022,13.512,0,14.175,0,19.46s.022,5.948.118,8.023a14.272,14.272,0,0,0,.9,4.723,9.513,9.513,0,0,0,2.245,3.447A9.569,9.569,0,0,0,6.714,37.9a14.283,14.283,0,0,0,4.724.9c2.076.094,2.738.118,8.023.118s5.948-.022,8.023-.118a14.274,14.274,0,0,0,4.724-.9A9.949,9.949,0,0,0,37.9,32.206a14.233,14.233,0,0,0,.9-4.723c.094-2.076.116-2.738.116-8.023s-.022-5.948-.116-8.023a14.268,14.268,0,0,0-.9-4.723,9.57,9.57,0,0,0-2.245-3.447,9.523,9.523,0,0,0-3.446-2.245,14.252,14.252,0,0,0-4.724-.9C25.411.024,24.747,0,19.462,0s-5.949.022-8.025.118" fill="url(#radial-gradient-2)"/>
+                  <path
+                    id="Path_849"
+                    data-name="Path 849"
+                    d="M12.975,19.46a6.487,6.487,0,1,1,6.486,6.487,6.487,6.487,0,0,1-6.486-6.487m-3.507,0a9.993,9.993,0,1,0,9.993-9.992A9.992,9.992,0,0,0,9.468,19.46M27.514,9.071A2.335,2.335,0,1,0,29.85,6.737h0a2.336,2.336,0,0,0-2.335,2.334M11.6,35.3a10.756,10.756,0,0,1-3.614-.669,6.048,6.048,0,0,1-2.238-1.456,6,6,0,0,1-1.456-2.237,10.745,10.745,0,0,1-.669-3.614c-.094-2.051-.113-2.667-.113-7.864s.02-5.811.113-7.864a10.826,10.826,0,0,1,.669-3.614A6.048,6.048,0,0,1,5.746,5.744,6,6,0,0,1,7.985,4.288,10.746,10.746,0,0,1,11.6,3.619c2.051-.094,2.668-.113,7.862-.113s5.811.02,7.864.113a10.827,10.827,0,0,1,3.614.669,6.029,6.029,0,0,1,2.238,1.456,6.029,6.029,0,0,1,1.456,2.238A10.745,10.745,0,0,1,35.3,11.6c.094,2.053.113,2.667.113,7.864s-.019,5.811-.113,7.864a10.8,10.8,0,0,1-.669,3.614,6.443,6.443,0,0,1-3.694,3.692,10.746,10.746,0,0,1-3.614.669c-2.051.094-2.668.113-7.864.113s-5.811-.019-7.862-.113M11.437.118a14.27,14.27,0,0,0-4.724.9A9.545,9.545,0,0,0,3.266,3.266,9.508,9.508,0,0,0,1.022,6.714a14.273,14.273,0,0,0-.9,4.723C.022,13.512,0,14.175,0,19.46s.022,5.948.118,8.023a14.272,14.272,0,0,0,.9,4.723,9.513,9.513,0,0,0,2.245,3.447A9.569,9.569,0,0,0,6.714,37.9a14.283,14.283,0,0,0,4.724.9c2.076.094,2.738.118,8.023.118s5.948-.022,8.023-.118a14.274,14.274,0,0,0,4.724-.9A9.95,9.95,0,0,0,37.9,32.206a14.233,14.233,0,0,0,.9-4.723c.094-2.076.116-2.738.116-8.023s-.022-5.948-.116-8.023a14.268,14.268,0,0,0-.9-4.723,9.57,9.57,0,0,0-2.245-3.447,9.523,9.523,0,0,0-3.446-2.245,14.252,14.252,0,0,0-4.724-.9C25.411.024,24.747,0,19.462,0s-5.949.022-8.025.118"
+                    fill="url(#radial-gradient)"
+                  />
+                  <path
+                    id="Path_850"
+                    data-name="Path 850"
+                    d="M12.975,19.46a6.487,6.487,0,1,1,6.486,6.487,6.487,6.487,0,0,1-6.486-6.487m-3.507,0a9.993,9.993,0,1,0,9.993-9.992A9.992,9.992,0,0,0,9.468,19.46M27.514,9.071A2.335,2.335,0,1,0,29.85,6.737h0a2.336,2.336,0,0,0-2.335,2.334M11.6,35.3a10.756,10.756,0,0,1-3.614-.669,6.048,6.048,0,0,1-2.238-1.456,6,6,0,0,1-1.456-2.237,10.745,10.745,0,0,1-.669-3.614c-.094-2.051-.113-2.667-.113-7.864s.02-5.811.113-7.864a10.826,10.826,0,0,1,.669-3.614A6.048,6.048,0,0,1,5.746,5.744,6,6,0,0,1,7.985,4.288,10.746,10.746,0,0,1,11.6,3.619c2.051-.094,2.668-.113,7.862-.113s5.811.02,7.864.113a10.827,10.827,0,0,1,3.614.669,6.029,6.029,0,0,1,2.238,1.456,6.029,6.029,0,0,1,1.456,2.238A10.745,10.745,0,0,1,35.3,11.6c.094,2.053.113,2.667.113,7.864s-.019,5.811-.113,7.864a10.8,10.8,0,0,1-.669,3.614,6.443,6.443,0,0,1-3.694,3.692,10.746,10.746,0,0,1-3.614.669c-2.051.094-2.668.113-7.864.113s-5.811-.019-7.862-.113M11.437.118a14.27,14.27,0,0,0-4.724.9A9.545,9.545,0,0,0,3.266,3.266,9.508,9.508,0,0,0,1.022,6.714a14.273,14.273,0,0,0-.9,4.723C.022,13.512,0,14.175,0,19.46s.022,5.948.118,8.023a14.272,14.272,0,0,0,.9,4.723,9.513,9.513,0,0,0,2.245,3.447A9.569,9.569,0,0,0,6.714,37.9a14.283,14.283,0,0,0,4.724.9c2.076.094,2.738.118,8.023.118s5.948-.022,8.023-.118a14.274,14.274,0,0,0,4.724-.9A9.949,9.949,0,0,0,37.9,32.206a14.233,14.233,0,0,0,.9-4.723c.094-2.076.116-2.738.116-8.023s-.022-5.948-.116-8.023a14.268,14.268,0,0,0-.9-4.723,9.57,9.57,0,0,0-2.245-3.447,9.523,9.523,0,0,0-3.446-2.245,14.252,14.252,0,0,0-4.724-.9C25.411.024,24.747,0,19.462,0s-5.949.022-8.025.118"
+                    fill="url(#radial-gradient-2)"
+                  />
                 </svg>
-                
               </a>
             </div>
           </div>
