--- a/index.html
+++ b/index.html
@@ -173,6 +173,6 @@
       </div>
     </div>
     <script type="text/javascript" src="cocktails.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script defer type="text/javascript" src="app.js"></script>
   </body>
 </html>
